# Brocc_Li

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
brocc_li/: agent.py  app.py  schemas.py  state.py  tools.py  ui.py  utils.py
exam/: abbreviations.csv  exam_prep.typ
exam_modified/: main.typ
examples/: report_generation_demo.py  web_search_demo.py
report/: main.typ  references.bib
src/: app.py
