[project]
name = "brocc-li"
version = "0.1.0"
description = "An artificial Dietitian that's actually intelligent"
authors = []
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.65",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.8",
    "streamlit>=1.45.1",
    "streamlit-chat>=0.1.1",
    "streamlit-extras>=0.7.1",
]

[dependency-groups]
dev = ["ruff>=0.11.13"]
